--- a/工程化/性能优化/渲染优化.md
+++ b/工程化/性能优化/渲染优化.md
@@ -122,3 +122,34 @@
 3. 重绘不一定会回流，回流一定会重排。
 
 
+### 减少 DOM 操作
+
+```js
+// 1.
+// 只获取一次container
+let container = document.getElementById('container')
+for(let count=0;count<10000;count++){ 
+  container.innerHTML += '<span>我是一个小测试</span>'
+} 
+
+// 2.
+let container = document.getElementById('container')
+let content = ''
+for(let count=0;count<10000;count++){ 
+  // 先对内容进行操作
+  content += '<span>我是一个小测试</span>'
+} 
+// 内容处理好了,最后再触发DOM的更改
+container.innerHTML = content
+
+// 3.Fragment
+let container = document.getElementById('container')
+let content = document.createDocumentFragment()
+for(let count=0;count<10000;count++){
+  let oSpan = document.createElement("span")
+  oSpan.innerHTML = '我是一个小测试'
+  content.appendChild(oSpan)
+}
+container.appendChild(content)
+```
+
