重绘 重排补充

--- a/工程化/性能优化/渲染优化.md
+++ b/工程化/性能优化/渲染优化.md
@@ -120,6 +120,10 @@
    2. 浏览器需要重新计算几何属性（其他元素因为排版也会收到影响）。
    3. 将计算的结果绘制出来。
 3. 重绘不一定会回流，回流一定会重排。
+4. 触发
+   1. 修改定位属性（脱离文档流）的几何属性会触发自身的重排重绘 而不会触发其他正常流的重绘。
+   2. 获取属性 `offsetxxx scrollxxx clientxxx`等属性（即时计算属性）也会触发重排。
+   3. 
 
 
 ### 减少 DOM 操作
