--- a/浏览器/浏览器安全.md
+++ b/浏览器/浏览器安全.md
@@ -39,4 +39,25 @@
     2.  法保证服务器发送给浏览器的数据安全
 3.  对称加密和非对称加密搭配使用
 4.  添加数字证书
-  
+
+
+### HTTP HTTPS区别
+**HTTP**
+-   支持客户/服务器模式
+-   简单快速 请求方法和路径
+-   灵活 任意类型数据 Content-Type标记
+-   无连接 每次连接只处理一次 收到应答后就断开连接
+-   无状态 HTTP协议无法根据上次请求进行本次请求的处理
+
+**HTTPS**
+-   过程
+    -   客户端通过URL访问服务器建立SSL连接
+    -   服务器接收到请求后，将网站支持的证书信息（包含公钥）传递给客户端
+    -   客户端协商SSL连接的安全等级
+    -   浏览器根据双方同意的安全等级，建立会话密钥，然后用公钥对会话密钥进行加密，传给服务器
+    -   服务器利用自己的私钥解密
+**区别**
+-   HTTPS更加安全
+-   默认端口80/443
+-   HTTPS需要加密和多次握手，性能不如HTTP
+-   HTTPS需要SSL证书
